# singularity-compose

./: pyproject.toml
my-app/: Singularity  etc.hosts  singularity-compose.yml
scompose/: version.py
